[gd_scene load_steps=3 format=3 uid="uid://h52vrgcs0ig2"]

[ext_resource type="Script" path="res://ver_1/actions/items/aoe_item.gd" id="1_ptwnf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qflad"]

[node name="AoeItem" type="Node2D"]
script = ExtResource("1_ptwnf")

[node name="HitBox" type="Area2D" parent="."]
scale = Vector2(10, 10)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_qflad")

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_hit_box_area_exited"]
